--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,14 @@
 {
-  "title:": "Заголовок",
-  "getInfo": "Получить информацию"
+  "Title:": "Заголовок",
+  "User info": "Информация о пользователе",
+  "Username": "Имя пользователя",
+  "User not found": "Пользователь не найден",
+  "Wallet address": "Адрес кошелька",
+  "Please connect wallet": "Пожалуйста, подключите кошелек",
+  "Language": "Язык",
+  "Invite your friends": "Пригласить друзей",
+  "Copy referral code":  "Скопировать код реферала",
+  "No telegram accaunt": "Нет аккаунта телеграм",
+  "Your referals": "Ваши рефералы",
+  "Game comming soon": "Игра скоро будет"
 }
