prepare creating tasks

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,14 +1,15 @@
 {
+  "Copy referral code": "Copy referral code",
+  "Game comming soon": "Game comming soon",
+  "Invite your friends": "Invite your friends",
+  "Language": "Language",
+  "No telegram accaunt": "No telegram accaunt",
+  "Please connect wallet": "Please connect wallet",
+  "Tasks": "Tasks",
   "Title": "Title",
   "User info": "User info",
-  "Username": "Username",
   "User not found": "User not found",
+  "Username": "Username",
   "Wallet address": "Wallet address",
-  "Please connect wallet": "Please connect wallet",
-  "Language": "Language",
-  "Invite your friends": "Invite your friends",
-  "Copy referral code": "Copy referral code",
-  "No telegram accaunt": "No telegram accaunt",
-  "Your referals": "Your referals",
-  "Game comming soon": "Game comming soon"
+  "Your referals": "Your referals"
 }
