--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,6 @@
   "User not found": "User not found",
   "Username": "Username",
   "Wallet address": "Wallet address",
-  "Your referals": "Your referals"
+  "Your referals": "Your referals",
+  "Home": "Home"
 }
