--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,6 @@
   "User not found": "Пользователь не найден",
   "Username": "Имя пользователя",
   "Wallet address": "Адрес кошелька",
-  "Your referals": "Ваши рефералы"
+  "Your referals": "Ваши рефералы",
+  "Home": "Главная"
 }
