--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,6 @@
   "Username": "Username",
   "Wallet address": "Wallet address",
   "Your referals": "Your referals",
-  "Home": "Home"
+  "Home": "Home",
+  "Claimed": "Claimed"
 }
