--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,6 @@
   "Username": "Имя пользователя",
   "Wallet address": "Адрес кошелька",
   "Your referals": "Ваши рефералы",
-  "Home": "Главная"
+  "Home": "Главная",
+  "Claimed": "Получено"
 }
