fix requests with auth

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,8 @@
   "Wallet address": "Wallet address",
   "Your referals": "Your referals",
   "Home": "Home",
-  "Claimed": "Claimed"
+  "Claimed": "Claimed",
+  "Check": "Check",
+  "Claim": "Claim",
+  "Claimed tasks": "Claimed tasks"
 }
