--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,8 @@
   "Wallet address": "Адрес кошелька",
   "Your referals": "Ваши рефералы",
   "Home": "Главная",
-  "Claimed": "Получено"
+  "Claimed": "Получено",
+  "Check": "Проверить",
+  "Claim": "Получить",
+  "Claimed tasks": "Полученные задания"
 }
