replace font, fix boots, fix query time

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
   "Claimed": "Claimed",
   "Check": "Check",
   "Claim": "Claim",
-  "Claimed tasks": "Claimed tasks"
+  "Claimed tasks": "Claimed tasks",
+  "Invite": "Invite"
 }
