--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
   "Claimed": "Получено",
   "Check": "Проверить",
   "Claim": "Получить",
-  "Claimed tasks": "Полученные задания"
+  "Claimed tasks": "Полученные задания",
+  "Invite": "Пригласить"
 }
