--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,6 @@
   "Check": "Check",
   "Claim": "Claim",
   "Claimed tasks": "Claimed tasks",
-  "Invite": "Invite"
+  "Invite": "Invite",
+  "User": "User"
 }
