--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
   "Check": "Проверить",
   "Claim": "Получить",
   "Claimed tasks": "Полученные задания",
-  "Invite": "Пригласить"
+  "Invite": "Пригласить",
+  "User": "Пользователь"
 }
