edit copy ref link button

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Copy referral code": "Copy referral code",
+  "Copied": "Copied",
   "Game comming soon": "Game comming soon",
   "Invite your friends": "Invite your friends",
   "Language": "Language",
