--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "Copy referral code": "Скопировать код реферала",
+  "Copied": "Скопировано",
   "Game comming soon": "Игра скоро будет",
   "Invite your friends": "Пригласить друзей",
   "Language": "Язык",
