fix random generating balls

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,7 @@
   "Claim": "Claim",
   "Claimed tasks": "Claimed tasks",
   "Invite": "Invite",
-  "User": "User"
+  "User": "User",
+  "Play game": "Play game",
+  "Game points": "Game points"
 }
