--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,5 +19,7 @@
   "Claim": "Получить",
   "Claimed tasks": "Полученные задания",
   "Invite": "Пригласить",
-  "User": "Пользователь"
+  "User": "Пользователь",
+  "Play game": "Играть",
+  "Game points": "Очки игры"
 }
