make auth provider, prepare adding sfs

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,5 +21,6 @@
   "Invite": "Invite",
   "User": "User",
   "Play game": "Play game",
-  "Game points": "Game points"
+  "Game points": "Game points",
+  "TIMER": "TIMER"
 }
