--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,5 +21,6 @@
   "Invite": "Пригласить",
   "User": "Пользователь",
   "Play game": "Играть",
-  "Game points": "Очки игры"
+  "Game points": "Очки игры",
+  "TIMER": "Таймер"
 }
