make redesign game, fix images, bugs

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,5 +22,7 @@
   "User": "User",
   "Play game": "Play game",
   "Game points": "Game points",
-  "TIMER": "TIMER"
+  "TIMER": "TIMER",
+  "SCORE": "SCORE",
+  "TOTAL": "TOTAL"
 }
