--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,5 +22,7 @@
   "User": "Пользователь",
   "Play game": "Играть",
   "Game points": "Очки игры",
-  "TIMER": "Таймер"
+  "TIMER": "Таймер",
+  "SCORE": "Счёт",
+  "TOTAL": "Всего"
 }
