redesign play button, fix navigation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,5 +24,6 @@
   "Game points": "Game points",
   "TIMER": "TIMER",
   "SCORE": "SCORE",
-  "TOTAL": "TOTAL"
+  "TOTAL": "TOTAL",
+  "you have attempts": "you have {{ attempts }} attempts"
 }
