--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,5 +24,6 @@
   "Game points": "Очки игры",
   "TIMER": "Таймер",
   "SCORE": "Счёт",
-  "TOTAL": "Всего"
+  "TOTAL": "Всего",
+  "you have attempts": "Осталось попыток: {{ attempts }}"
 }
